--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.firebase:firebase-auth:22.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.mapbox.navigation:android:X.Y.Z-SNAPSHOT'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.mapbox.navigation:ui-dropin:2.17.4'
+    implementation 'com.mapbox.navigation:android:2.17.4'
 
 
         implementation 'com.mapbox.maps:android:10.16.2'
