--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.mapbox.navigation:ui-dropin:2.17.4'
     implementation 'com.mapbox.navigation:android:2.17.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
 
 
         implementation 'com.mapbox.maps:android:10.16.2'
